# autobiography_agents_system

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
backend/: .env.example  .env.production.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: editor.py  graph.py  interviewer.py  planner.py  writer.py
backend/app/api/: routes.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  agent_run.py  chapter.py  interview.py  project.py  revision.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: chapter_service.py  interview_service.py  llm.py  patch.py  project_service.py  publish_service.py
backend/tests/: test_api.py  test_manual_edit.py  test_patch.py  test_publish.py
deploy/: Caddyfile
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/app/project/[id]/chapter/[chapterId]/: page.tsx
frontend/src/app/project/[id]/interview/[chapterId]/: page.tsx
frontend/src/app/project/[id]/settings/: page.tsx
frontend/src/app/share/[token]/: page.tsx
frontend/src/components/: BottomNav.tsx  ChapterCard.tsx  ChapterSidebar.tsx  ChatBubble.tsx  DiffPreview.tsx  LoadingSpinner.tsx  SplashScreen.tsx  StartupGate.tsx
frontend/src/lib/: api.ts  types.ts
